--- a/apps/user-side/package.json
+++ b/apps/user-side/package.json
@@ -11,21 +11,24 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@repo/db": "*",
+    "@repo/store": "*",
     "@tailwindcss/postcss": "^4.1.18",
+    "bcrypt": "^6.0.0",
     "next": "16.1.0",
+    "next-auth": "^4.24.13",
     "postcss": "^8.4.31",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18",
-    "@repo/store": "*",
-    "@repo/db": "*"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@repo/db": "*",
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "^0.0.0",
     "@repo/typescript-config": "*",
     "@repo/ui": "^0.0.0",
-    "@repo/db": "*",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
