--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "dotenv": "^17.2.3",
     "husky": "^9.1.7",
     "prettier": "^3.7.4",
     "turbo": "^2.7.5",
