--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "exports" :{
     "./client" : "./src/index.ts"
   },
