--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-
+      - name: Generate Prisma client
+        run: cd packages/db && npx prisma generate && cd ../..
       - name: Run Build
         run: npm run build
