added new script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Generate Prisma client
-        run: cd packages/db && npx prisma generate && cd ../..
+        run: npm run db:client
         env:
           DATABASE_URL: "postgresql://user:password@localhost:5432/testdb?schema=public"
       - name: Run Build
