--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,4 +29,4 @@ jobs:
             DATABASE_URL=${{ secrets.CI_DATABASE_URL }}
 
       - name: Verify Pushed Image
-        run: docker pull nikshrma/wallet-images:latest # Replace with your Docker Hub username and repository
+        run: docker pull nikshrma/wallet-images:latest 
